cambios agragamos push

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 <body>
     <h1>Hola aprendiendo terminales</h1>
     <p>no es facil pero la practica hace al maestro</p>
-    
+    <p>logre hacer el primer push al fiiiinnnnn
+        
+    </p>
 </body>
 </html>
